Implementando versões da API no Swagger

--- a/src/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
+++ b/src/SmartSchool.WebAPI/SmartSchool.WebAPI.csproj
@@ -21,7 +21,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1"/>
   </ItemGroup>
-
 
 </Project>
